src/amd/common/ac_gpu_info.h
@@ -28,11 +28,13 @@
 
 #include "amd_family.h"
 
-#include <amdgpu.h>
-
 #ifdef __cplusplus
 extern "C" {
 #endif
+
+/* Prior to C11 the following may trigger a typedef redeclaration warning */
+typedef void * amdgpu_device_handle;
+struct amdgpu_gpu_info;
 
 struct radeon_info {
 	/* PCI info: domain:bus:dev:func */
